--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@apollo/client": "^3.7.16",
     "expo": "~48.0.18",
+    "expo-constants": "^14.4.2",
     "expo-status-bar": "~1.4.4",
     "graphql": "^15.8.0",
     "react": "18.2.0",
