--- a/package.json
+++ b/package.json
@@ -6,19 +6,34 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "codegen": "graphql-codegen --config codegen.yml --watch"
   },
   "dependencies": {
     "@apollo/client": "^3.7.16",
+    "@types/react": "~18.0.27",
+    "codegen": "^0.1.0",
+    "dotenv": "^16.3.1",
     "expo": "~48.0.18",
-    "expo-constants": "^14.4.2",
+    "expo-constants": "~14.2.1",
     "expo-status-bar": "~1.4.4",
     "graphql": "^15.8.0",
     "react": "18.2.0",
-    "react-native": "0.71.8"
+    "react-native": "0.71.8",
+    "react-native-dotenv": "^3.4.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@graphql-codegen/cli": "^4.0.1",
+    "@graphql-codegen/typescript": "^4.0.1",
+    "@graphql-codegen/typescript-operations": "^4.0.1",
+    "@graphql-codegen/typescript-react-apollo": "^3.3.7",
+    "@graphql-codegen/typescript-resolvers": "^4.0.1",
+    "@tsconfig/react-native": "^3.0.2",
+    "@types/jest": "^29.5.2",
+    "@types/react": "^18.2.14",
+    "@types/react-test-renderer": "^18.0.0",
+    "typescript": "^5.1.6"
   },
   "private": true
 }
