--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "graphql": "^15.8.0",
     "react": "18.2.0",
     "react-native": "0.71.8",
-    "react-native-dotenv": "^3.4.9"
+    "react-native-dotenv": "^3.4.9",
+    "expo-secure-store": "~12.1.1",
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
