--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "dotenv": "^16.3.1",
     "expo": "~48.0.18",
     "expo-constants": "~14.2.1",
+    "expo-mail-composer": "^12.3.0",
     "expo-secure-store": "~12.1.1",
     "expo-status-bar": "~1.4.4",
     "graphql": "^15.8.0",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-communications": "^0.2.3",
     "react-native-dotenv": "^3.4.9",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
