--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-dotenv": "^3.4.9",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "socket.io-client": "^4.7.1",
     "typescript": "^4.9.4"
   },
   "devDependencies": {
