--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.16",
+    "@expo-google-fonts/exo": "^0.2.3",
+    "@expo-google-fonts/libre-franklin": "^0.2.3",
+    "@expo-google-fonts/poppins": "^0.2.3",
+    "@react-native-community/datetimepicker": "6.7.3",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
@@ -20,6 +24,7 @@
     "dotenv": "^16.3.1",
     "expo": "~48.0.18",
     "expo-constants": "~14.2.1",
+    "expo-font": "~11.1.1",
     "expo-secure-store": "~12.1.1",
     "expo-status-bar": "~1.4.4",
     "graphql": "^15.8.0",
@@ -30,8 +35,7 @@
     "react-native-dotenv": "^3.4.9",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "typescript": "^4.9.4",
-    "@react-native-community/datetimepicker": "6.7.3"
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
